to-migrate/dashboards/Middleware-Dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard-chain-authelia-auth
  namespace: kubernetes-dashboard
spec:
  chain:
    middlewares:
      - name: kubernetes-dashboard-forwardauth-authelia
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard-forwardauth-authelia
  namespace: kubernetes-dashboard
spec:
  forwardAuth:
    address: >-
      http://authelia.authelia.svc.cluster.local/api/verify?rd=https://auth.chenchik.me/
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
    trustForwardHeader: true
