to-migrate/dashboards/IngressRoute-Dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: kubernetes-dashboard-dashboard
  namespace: kubernetes-dashboard

spec:
  entryPoints:
    - web

  routes:
    - kind: Rule
      match: Host(`k8s.chenchik.me`)

      middlewares:
        - name: kubernetes-dashboard-chain-authelia-auth

      services:
        - name: kubernetes-dashboard
          namespace: kubernetes-dashboard
          port: 80

  tls:
    certResolver: acme-http
