to-migrate/dashboards/IngressRoute-Traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard-ingress
  namespace: traefik

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`traefik.chenchik.me`)
      kind: Rule

      middlewares:
        - name: chain-authelia-auth

      services:
        - name: api@internal
          kind: TraefikService

  tls:
    certResolver: acme-http
